feat: implement nested component

--- a/packages/demo/locales/en.json
+++ b/packages/demo/locales/en.json
@@ -16,6 +16,15 @@
       "api": {
         "title": "API",
         "description": "The API Endpoints any developers can access to"
+      },
+      "fruit": {
+        "title": "Fruit"
+      },
+      "apple": {
+        "title": "Apple"
+      },
+      "orange": {
+        "title": "Orange"
       }
     }
   }
