feat: make header status optional

--- a/packages/@statusfy/core/client/locales/en-default.json
+++ b/packages/@statusfy/core/client/locales/en-default.json
@@ -14,7 +14,8 @@
     "degraded-performance": "Degraded Performance",
     "partial-outage": "Partial Outage",
     "major-outage": "Major Outage",
-    "operational": "Operational"
+    "operational": "Operational",
+    "title": "System Status"
   },
   "dates": {
     "formats": {
